--- a/mine/Makefile
+++ b/mine/Makefile
@@ -1,4 +1,4 @@
 all:
-	gcc -Wall -O3 -g -pg lyon.c chash.c
+	gcc -Wall -O3 -g -pg lyon.c runba.c chash.c manbo.c ranbada.c
 pet:
-	gcc -Wall -O3 -g -pg p-tar.c chash.c
+	gcc -Wall -O3 -g -pg p-tar.c chash.c runba.c manbo.c ranbada.c
