--- a/mine/Makefile
+++ b/mine/Makefile
@@ -1,4 +1,6 @@
 all:
-	gcc -Wall -O3 -g -pg lyon.c chash.c runba.c manbo.c ranbada.c
+	gcc -Wall -O3 -g -pg lyon.c chash.c
 pet:
 	gcc -Wall -O3 -g -pg p-tar.c chash.c
+odd:
+	gcc -Wall -O3 -g -pg o-ter.c chash-p.c
